developer/src/kmc-package/test/fixtures/invalid/error_package_cannot_contain_both_models_and_keyboards.kps
<?xml version="1.0" encoding="utf-8"?>
<Package>
  <System>
    <KeymanDeveloperVersion>15.0.266.0</KeymanDeveloperVersion>
    <FileVersion>7.0</FileVersion>
  </System>
  <Info>
    <Name URL="">Khmer Angkor</Name>
    <Copyright URL="">© 2015-2022 SIL International</Copyright>
    <Author URL="mailto:makara_sok@sil.org">Makara Sok</Author>
    <Version URL="">1.0</Version>
    <WebSite URL="https://keyman.com/keyboards/khmer_angkor">https://keyman.com/keyboards/khmer_angkor</WebSite>
  </Info>
  <Files>
    <File>
      <Name>basic.kmx</Name>
      <Description>Keyboard Basic</Description>
      <CopyLocation>0</CopyLocation>
      <FileType>.kmx</FileType>
    </File>
    <File>
      <Name>example.qaa.sencoten.model.js</Name>
      <Description>Lexical model example.qaa.sencoten.model.js</Description>
      <CopyLocation>0</CopyLocation>
      <FileType>.model.js</FileType>
    </File>
  </Files>
  <!-- ERROR_PackageCannotContainBothModelsAndKeyboards -->
  <LexicalModels>
    <LexicalModel>
      <Name>SENĆOŦEN dictionary</Name>
      <ID>example.qaa.sencoten</ID>
      <Languages>
        <Language ID="qaa">North Straits Salish</Language>
        <Language ID="qaa-Latn">SENĆOŦEN</Language>
      </Languages>
    </LexicalModel>
  </LexicalModels>
  <Keyboards>
    <Keyboard>
      <Name>Basic</Name>
      <ID>basic</ID>
      <Version>1.0</Version>
      <Languages>
        <Language ID="km">Central Khmer (Khmer, Cambodia)</Language>
      </Languages>
    </Keyboard>
  </Keyboards>
</Package>
